Adjust demos/lifetime_calc.ipynb to new meanstress transformation
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -42,7 +42,7 @@
     "import pylife.stress.equistress\n",
     "\n",
     "import pylife.stress.rainflow\n",
-    "import pylife.strength.meanstress\n",
+    "import pylife.strength.meanstress as MS\n",
     "import pylife.strength.fatigue\n",
     "\n",
     "import pylife.mesh.meshsignal\n",
@@ -74,8 +74,7 @@
    "outputs": [],
    "source": [
     "# read the rf data\n",
-    "rf_dict = pickle.load(open(\"rf_dict.p\", \"rb\"))\n",
-    "f = plot_rf(rf_dict)"
+    "rf_dict = pickle.load(open(\"rf_dict.p\", \"rb\"))"
    ]
   },
   {
@@ -105,16 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transformed_dict = {k: rf_act.meanstress_hist.FKM_goodman(meanstress_sensitivity, R_goal=-1.) for k, rf_act in rf_dict.items()}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transformed_dict"
+    "transformed_dict = {k: rf_act.meanstress_transform.fkm_goodman(meanstress_sensitivity, R_goal=-1.).to_pandas() for k, rf_act in rf_dict.items()}"
    ]
   },
   {
@@ -160,7 +150,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dict['total'] = combine_hist([load_dict[k] for k in load_dict.keys()], method=\"sum\", nbins=9, histtype=\"range\")"
+    "load_dict['total'] = pd.concat([load_dict[k] for k in load_dict.keys()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bins = pd.interval_range(0., load_dict['total'].rainflow.use_class_right().amplitude.max(), 64)\n",
+    "rebinned_dict = {k: rebin_histogram(v.rainflow.amplitude_histogram, bins) for k, v in load_dict.items()}"
    ]
   },
   {
@@ -171,9 +171,10 @@
    "source": [
     "fig, ax = plt.subplots(nrows=1, ncols=2,figsize=(10, 5))\n",
     "\n",
-    "for k, v in load_dict.items():\n",
-    "    amplitude = v.rainflow.amplitude[::-1]\n",
-    "    cycles = v.values[::-1].ravel()\n",
+    "for k, v in rebinned_dict.items():\n",
+    "    #collective = v.rainflow\n",
+    "    amplitude = v.index.right[::-1]\n",
+    "    cycles = v[::-1]\n",
     "    ax[0].step(cycles, amplitude, label=k)\n",
     "    ax[1].step(np.cumsum(cycles), amplitude, label=k)\n",
     "\n",
@@ -274,8 +275,8 @@
     "    load = wc.basquin_load(cyc, failure_probability=pf)\n",
     "    plt.plot(cyc, load, style)\n",
     "\n",
-    "plt.step(np.cumsum(cycles), 2 * load_dict['total'].rainflow.amplitude[::-1])\n",
-    "plt.xlabel(\"frequency\"), plt.ylabel(\"range\")\n",
+    "plt.step(np.cumsum(rebinned_dict['total'][::-1]), rebinned_dict['total'].index.right[::-1])\n",
+    "plt.xlabel(\"cylces\"), plt.ylabel(\"amplitude\")\n",
     "plt.loglog()"
    ]
   },
@@ -400,8 +401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaled_rainflow = load_dict['total'].rainflow.scale(mises)\n",
-    "#scaled_rainflow.amplitude, scaled_rainflow.frequency"
+    "scaled_rainflow = load_dict['total'].rainflow.scale(mises)\n"
    ]
   },
   {
@@ -500,7 +500,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
