Move load collective classes out of rainflow subpackage.
This is a rather invasive change as it changes the `rainflow` accessor string
to `load_collective`.

Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -38,10 +38,10 @@
     "import pickle\n",
     "from pylife.stress.histogram import *\n",
     "import pylife.stress.timesignal as ts\n",
-    "from pylife.stress.rainflow import *\n",
+    "\n",
     "import pylife.stress.equistress\n",
     "\n",
-    "import pylife.stress.rainflow\n",
+    "import pylife.stress\n",
     "import pylife.strength.meanstress as MS\n",
     "import pylife.strength.fatigue\n",
     "\n",
@@ -159,8 +159,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bins = pd.interval_range(0., load_dict['total'].rainflow.use_class_right().amplitude.max(), 64)\n",
-    "rebinned_dict = {k: rebin_histogram(v.rainflow.amplitude_histogram, bins) for k, v in load_dict.items()}"
+    "bins = pd.interval_range(0., load_dict['total'].load_collective.use_class_right().amplitude.max(), 64)\n",
+    "rebinned_dict = {k: rebin_histogram(v.load_collective.amplitude_histogram, bins) for k, v in load_dict.items()}"
    ]
   },
   {
@@ -172,7 +172,6 @@
     "fig, ax = plt.subplots(nrows=1, ncols=2,figsize=(10, 5))\n",
     "\n",
     "for k, v in rebinned_dict.items():\n",
-    "    #collective = v.rainflow\n",
     "    amplitude = v.index.right[::-1]\n",
     "    cycles = v[::-1]\n",
     "    ax[0].step(cycles, amplitude, label=k)\n",
@@ -235,9 +234,9 @@
    "outputs": [],
    "source": [
     "# damage for every load range\n",
-    "damage_miner_original = {k: mat.fatigue.damage(v.rainflow) for k, v in load_dict.items()}\n",
-    "damage_miner_elementary = {k: mat.fatigue.miner_elementary().damage(v.rainflow) for k, v in load_dict.items()}\n",
-    "damage_miner_haibach = {k: mat.fatigue.miner_haibach().damage(v.rainflow) for k, v in load_dict.items()}\n",
+    "damage_miner_original = {k: mat.fatigue.damage(v.load_collective) for k, v in load_dict.items()}\n",
+    "damage_miner_elementary = {k: mat.fatigue.miner_elementary().damage(v.load_collective) for k, v in load_dict.items()}\n",
+    "damage_miner_haibach = {k: mat.fatigue.miner_haibach().damage(v.load_collective) for k, v in load_dict.items()}\n",
     "\n",
     "# and the damage sum\n",
     "damage_sum_miner_haibach = {k: v.sum() for k, v in damage_miner_haibach.items()}\n",
@@ -401,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaled_rainflow = load_dict['total'].rainflow.scale(mises)\n"
+    "scaled_collective = load_dict['total'].load_collective.scale(mises)\n"
    ]
   },
   {
@@ -410,7 +409,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "damage = mat.fatigue.damage(scaled_rainflow)"
+    "damage = mat.fatigue.damage(scaled_collective)"
    ]
   },
   {
