--- a/demos/local_stress_with_FE.ipynb
+++ b/demos/local_stress_with_FE.ipynb
@@ -29,7 +29,7 @@
     "import pylife.mesh\n",
     "import pylife.mesh.meshsignal\n",
     "import pylife.stress.equistress\n",
-    "import pylife.stress.rainflow\n",
+    "import pylife.stress\n",
     "import pylife.strength.fatigue\n",
     "import pylife.stress.histogram as psh\n",
     "import pyvista as pv\n",
@@ -94,7 +94,7 @@
     "collectives_sorted = psh.combine_hist([collectives[col] for col in collectives],\n",
     "                                             method=\"sum\", nbins=32, histtype=\"ranges\")\n",
     "\n",
-    "scaled_collectives = collectives_sorted.rainflow.scale(mises)\n",
+    "scaled_collectives = collectives_sorted.load_collective.scale(mises)\n",
     "display(scaled_collectives.to_pandas().sample(5))"
    ]
   },
@@ -196,7 +196,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
