Rename matrix_series() → histogram() and matrix() → histogram_numpy()
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/time_series_handling.ipynb
+++ b/demos/time_series_handling.ipynb
@@ -209,7 +209,7 @@
     "#%% Rainflow for a multiple time series\n",
     "recorder_dict = {key: RFR.FullRecorder() for key in cleaned_df}\n",
     "detector_dict = {key: RF.FKMDetector(recorder=recorder_dict[key]).process(cleaned_df[key]) for key in cleaned_df}\n",
-    "rf_series_dict = {key: detector_dict[key].recorder.matrix_series(rainflow_bins) for  key in detector_dict.keys()}"
+    "rf_series_dict = {key: detector_dict[key].recorder.histogram(rainflow_bins) for  key in detector_dict.keys()}"
    ]
   },
   {
