Adjust jupyter notebooks
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/local_stress_with_FE.ipynb
+++ b/demos/local_stress_with_FE.ipynb
@@ -91,8 +91,8 @@
     "mises /= mises.max()  # the nominal load level in the FEM analysis is set, that s_max = 1\n",
     "collectives = pickle.load(open(\"collectives.p\", \"rb\"))\n",
     "collectives = collectives.unstack().T.fillna(0)\n",
-    "collectives_sorted = psh.combine_hist([collectives[col] for col in collectives],\n",
-    "                                             method=\"sum\", nbins=32, histtype=\"ranges\")\n",
+    "collectives_sorted = psh.combine_histogram([collectives[col] for col in collectives],\n",
+    "                                             method=\"sum\", binning=32)\n",
     "\n",
     "scaled_collectives = collectives_sorted.load_collective.scale(mises)\n",
     "display(scaled_collectives.to_pandas().sample(5))"
