--- a/demos/time_series_handling.ipynb
+++ b/demos/time_series_handling.ipynb
@@ -228,8 +228,8 @@
    "outputs": [],
    "source": [
     "#%% Now Combining different RFs to one\n",
-    "rf_series_dict[\"wn + sn\"] = psh.combine_hist([rf_series_dict[\"wn\"],rf_series_dict[\"sine\"]],\n",
-    "                                             method=\"sum\")\n",
+    "rf_series_dict[\"wn + sn\"] = psh.combine_histogram([rf_series_dict[\"wn\"],rf_series_dict[\"sine\"]],\n",
+    "                                                  method=\"sum\")\n",
     "f = plot_rf(rf_series_dict)"
    ]
   },
