Move histogram.py from stress to utils
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -36,7 +36,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pickle\n",
-    "from pylife.stress.histogram import *\n",
+    "from pylife.utils.histogram import *\n",
     "import pylife.stress.timesignal as ts\n",
     "\n",
     "import pylife.stress.equistress\n",
