--- a/demos/local_stress_with_FE.ipynb
+++ b/demos/local_stress_with_FE.ipynb
@@ -31,7 +31,7 @@
     "import pylife.stress.equistress\n",
     "import pylife.stress\n",
     "import pylife.strength.fatigue\n",
-    "import pylife.stress.histogram as psh\n",
+    "import pylife.utils.histogram as psh\n",
     "import pyvista as pv\n",
     "\n",
     "# from ansys.dpf import post\n",
