--- a/demos/time_series_handling.ipynb
+++ b/demos/time_series_handling.ipynb
@@ -29,7 +29,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "import pylife.stress.histogram as psh\n",
+    "import pylife.utils.histogram as psh\n",
     "import pylife.stress.timesignal as ts\n",
     "import pylife.stress.rainflow as RF\n",
     "import pylife.stress.rainflow.recorders as RFR\n",
