Adjust notebooks to new histogram module
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/local_stress_with_FE.ipynb
+++ b/demos/local_stress_with_FE.ipynb
@@ -92,7 +92,7 @@
     "collectives = pickle.load(open(\"collectives.p\", \"rb\"))\n",
     "collectives = collectives.unstack().T.fillna(0)\n",
     "collectives_sorted = psh.combine_histogram([collectives[col] for col in collectives],\n",
-    "                                             method=\"sum\", binning=32)\n",
+    "                                             method=\"sum\")\n",
     "\n",
     "scaled_collectives = collectives_sorted.load_collective.scale(mises)\n",
     "display(scaled_collectives.to_pandas().sample(5))"
