Mock pyvista in notebook tests
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/local_stress_with_FE.ipynb
+++ b/demos/local_stress_with_FE.ipynb
@@ -134,7 +134,8 @@
    "outputs": [],
    "source": [
     "damage = mat.fatigue.miner_haibach().damage(scaled_collectives)\n",
-    "print(\"Max damage : %f\" % damage.max())"
+    "print(\"Max damage : %f\" % damage.max())\n",
+    "damage = damage.groupby(['element_id']).sum()"
    ]
   },
   {
@@ -143,8 +144,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "damage = damage.groupby(['element_id']).sum()\n",
-    "\n",
     "grid = pv.UnstructuredGrid(*pyLife_mesh.mesh.vtk_data())\n",
     "plotter = pv.Plotter(window_size=[1920, 1080])\n",
     "plotter.add_mesh(grid, scalars=damage.to_numpy(),\n",
