Add docs to odbclient
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/tools/odbclient/demo.ipynb
+++ b/tools/odbclient/demo.ipynb
@@ -15,11 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "abaqus_bin = <path to abaqus binary>\n",
-    "python_env = <path to python env where pylife-odbserver is installed>\n",
-    "python_path = python_env + \"lib/python2.7/site-packages\"\n",
-    "\n",
-    "client = CL.OdbClient(abaqus_bin, python_env, \"some_odbfile.odb\")\n"
+    "client = CL.OdbClient(\"/home/jmu3si/Devel/odb2pandas/Job-Zugprobe_3D_V5-2020.odb\")\n"
    ]
   },
   {
@@ -119,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(client._proc.poll())"
+    "client.nset_names('foo')"
    ]
   },
   {
@@ -127,9 +123,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "del(client)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
