--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -512,7 +512,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
