--- a/demos/time_series_handling.ipynb
+++ b/demos/time_series_handling.ipynb
@@ -197,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rainflow_bins = 10"
+    "rainflow_bins = 128"
    ]
   },
   {
@@ -227,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%% Now Combining different RFs to one\n",
+    "# %% Now Combining different RFs to one\n",
     "rf_series_dict[\"wn + sn\"] = psh.combine_histogram([rf_series_dict[\"wn\"],rf_series_dict[\"sine\"]],\n",
     "                                                  method=\"sum\")\n",
     "f = plot_rf(rf_series_dict)"
@@ -281,7 +281,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -294,7 +294,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
