Replace pickle file with %store magic
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -73,8 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read the rf data\n",
-    "rf_dict = pickle.load(open(\"rf_dict.p\", \"rb\"))"
+    "%store -r rf_dict"
    ]
   },
   {
