--- a/demos/time_series_handling.ipynb
+++ b/demos/time_series_handling.ipynb
@@ -197,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rainflow_bins = 10"
+    "rainflow_bins = 128"
    ]
   },
   {
@@ -274,14 +274,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf_out = {k: rf_series_dict[k] for k in [\"wn\", \"sine\", \"SoR\"] if k in rf_series_dict}\n",
-    "pickle.dump(rf_out, open(\"rf_dict.p\", \"wb\"))"
+    "rf_dict = {k: rf_series_dict[k] for k in [\"wn\", \"sine\", \"SoR\"] if k in rf_series_dict}\n",
+    "%store rf_dict"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
