Fix some docs build issues
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -6,22 +6,20 @@
    "source": [
     "# Life time Calculation \n",
     "\n",
-    "<div style=\"text-align: right\"><img src=\"./dash-apps/pyLife_logo_20200219_FINAL_RGB.png\" width=\"250\" /></div>\n",
-    "\n",
     "This Notebook shows a general calculation stream for a nominal and local stress reliability approach.\n",
     "\n",
-    "#### Stress derivation #####\n",
+    "#### Stress derivation\n",
     "We are starting with the imported rainflow matrices. More information about the time series and loading handlin and the RF generation you can find in the notebook [time_series_handling](http://localhost:8888/notebooks/time_series_handling.ipynb)\n",
     "\n",
     "1. Mean stress correction\n",
     "2. Multiplication with repeating factor of every manoveur\n",
     "\n",
-    "#### Damage Calculation ####\n",
+    "#### Damage Calculation\n",
     "1. Select the damage calculation method (Miner elementary, Miner-Haibach, ...)\n",
     "2. Calculate the damage for every load level and the damage sum\n",
     "3. Calculate the failure probability with or w/o field scatter\n",
     "\n",
-    "#### Local stress approach ####\n",
+    "#### Local stress approach\n",
     "1. Load the FE mesh\n",
     "2. Apply the load history to the FE mesh\n",
     "3. Calculate the damage\n"
@@ -80,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Meanstress transformation ###\n",
+    "### Meanstress transformation\n",
     "\n",
     "Here we are using the *FKM Goodman* approach to calculate the meanstress transformation"
    ]
@@ -189,14 +187,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Nominal stress approach ##"
+    "## Nominal stress approach"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Material parameters ###\n",
+    "### Material parameters\n",
     "You can create your own material data from Woeler tests using the Notebook [woehler_analyzer](http://localhost:8888/notebooks/woehler_analyzer.ipynb)"
    ]
   },
@@ -222,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Damage Calculation ###\n",
+    "### Damage Calculation\n",
     "Now we can calculate the damage for every loadstep and summarize this damage to get the total damage."
    ]
   },
@@ -282,14 +280,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Failure Probaility ##"
+    "## Failure Probability"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Without field scatter ####\n",
+    "### Without field scatter\n",
     "\n",
     "In the first use case we assume, that we have the material scatter only. With that we can calculate the failure probability using the *FailureProbability* class."
    ]
@@ -322,8 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### With field scatter ####\n",
-    "\n",
+    "### With field scatter ###\n",
     "If we have the field scatter we can calculate the failure probability using convoluation of the probility density functions of the load and the strength."
    ]
   },
@@ -352,7 +349,7 @@
    "metadata": {},
    "source": [
     "## Local stress approach ##\n",
-    "#### FE based failure probability calculation"
+    "### FE based failure probability calculation"
    ]
   },
   {
@@ -390,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Damage Calculation ####"
+    "#### Damage Calculation"
    ]
   },
   {
