Fix title insconsistencies in lifetime_calc.ipynb
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -8,18 +8,20 @@
     "\n",
     "This Notebook shows a general calculation stream for a nominal and local stress reliability approach.\n",
     "\n",
-    "#### Stress derivation\n",
+    "## Overview\n",
+    "\n",
+    "### Stress derivation\n",
     "We are starting with the imported rainflow matrices. More information about the time series and loading handlin and the RF generation you can find in the notebook [time_series_handling](http://localhost:8888/notebooks/time_series_handling.ipynb)\n",
     "\n",
     "1. Mean stress correction\n",
     "2. Multiplication with repeating factor of every manoveur\n",
     "\n",
-    "#### Damage Calculation\n",
+    "### Damage Calculation\n",
     "1. Select the damage calculation method (Miner elementary, Miner-Haibach, ...)\n",
     "2. Calculate the damage for every load level and the damage sum\n",
     "3. Calculate the failure probability with or w/o field scatter\n",
     "\n",
-    "#### Local stress approach\n",
+    "### Local stress approach\n",
     "1. Load the FE mesh\n",
     "2. Apply the load history to the FE mesh\n",
     "3. Calculate the damage\n"
@@ -78,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Meanstress transformation\n",
+    "## Meanstress transformation\n",
     "\n",
     "Here we are using the *FKM Goodman* approach to calculate the meanstress transformation"
    ]
@@ -108,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Repeating factor\n",
+    "## Repeating factor\n",
     "If you want to apply a repeating factor to your loads you can do it very easily:"
    ]
   },
@@ -348,7 +350,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Local stress approach ##\n",
+    "## Local stress approach"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### FE based failure probability calculation"
    ]
   },
