Drop unnecessary useless file path in demo file
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/tools/odbclient/demo.ipynb
+++ b/tools/odbclient/demo.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = CL.OdbClient(\"/home/jmu3si/Devel/odb2pandas/Job-Zugprobe_3D_V5-2020.odb\")\n"
+    "client = CL.OdbClient(\"some-odb-file.odb\")\n"
    ]
   },
   {
