Use relative links to cross reference between demo notebooks
This is important to make the links work also in the html docs.

Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -11,7 +11,7 @@
     "## Overview\n",
     "\n",
     "### Stress derivation\n",
-    "We are starting with the imported rainflow matrices. More information about the time series and loading handlin and the RF generation you can find in the notebook [time_series_handling](http://localhost:8888/notebooks/time_series_handling.ipynb)\n",
+    "We are starting with the imported rainflow matrices. More information about the time series and loading handlin and the RF generation you can find in the notebook [time_series_handling](time_series_handling.ipynb)\n",
     "\n",
     "1. Mean stress correction\n",
     "2. Multiplication with repeating factor of every manoveur\n",
@@ -197,7 +197,7 @@
    "metadata": {},
    "source": [
     "### Material parameters\n",
-    "You can create your own material data from Woeler tests using the Notebook [woehler_analyzer](http://localhost:8888/notebooks/woehler_analyzer.ipynb)"
+    "You can create your own material data from Woeler tests using the Notebook [woehler_analyzer](woehler_analyzer.ipynb)"
    ]
   },
   {
