--- a/demos/time_series_handling.ipynb
+++ b/demos/time_series_handling.ipynb
@@ -262,7 +262,7 @@
     "### Saving\n",
     "\n",
     "Now we saving the rainflow data into a pickle file.\n",
-    "If you want to have an introduction to damage and failure probability calculation, please have a look on the notebook [lifetime_calc](http://localhost:8888/notebooks/lifetime_calc.ipynb)"
+    "If you want to have an introduction to damage and failure probability calculation, please have a look on the notebook [lifetime_calc](lifetime_calc.ipynb)"
    ]
   },
   {
