Update demo notebooks
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/index.ipynb
+++ b/demos/index.ipynb
@@ -12,9 +12,37 @@
     "\n",
     "**Disclamer:** The demos here are – well – demos, i. e. they are not meant to be used for real calculation. No guaranties whatsoever.\n",
     "\n",
+    "## Tutorial notebooks\n",
+    "\n",
+    "These notebooks describe some concepts of pyLife in a practical way\n",
+    "\n",
+    "\n",
+    "### Wöhler curve\n",
+    "\n",
+    "The data structure to model Wöhler curves for e.g. damage calculations\n",
+    "\n",
+    "[Wöhler curve](woehler_curve.ipynb)\n",
+    "\n",
+    "\n",
+    "### Stress strength\n",
+    "\n",
+    "The concept of *stress* and *strength* that allows us to calculate damage sums and failure probabilities\n",
+    "\n",
+    "[Stress strength](stress_strength.ipynb)\n",
+    "\n",
+    "\n",
+    "### Load Collective\n",
+    "\n",
+    "How to model load collectives in pyLife\n",
+    "\n",
+    "[Load Collective](load_collective.ipynb)\n",
+    "\n",
+    "\n",
+    "\n",
     "## Demos\n",
     "\n",
     "This page features a couple of demos on pyLife\n",
+    "\n",
     "\n",
     "### Wöhler analysis\n",
     "\n",
@@ -39,22 +67,44 @@
     "\n",
     "### Lifetime calculation\n",
     "\n",
-    "The damage sum and failure probability can be calculated using a nominal and local stress reliability approach.\n",
+    "The damage sum and failure probability can be calculated using a nominal and local stress reliability approach. The two notebooks depend on each other. The *Time Series Handling* notebook needs to be executed first.\n",
     "\n",
-    "[Lifetime calculation](lifetime_calc.ipynb)\n",
+    "* [Time Series Handling](time_series_handling.ipynb)\n",
+    "* [Lifetime calculation](lifetime_calc.ipynb)\n",
+    "\n",
+    "\n",
+    "### Local stress approach\n",
+    "\n",
+    "Damage calculation by local stress approach\n",
+    "\n",
+    "[Local stress approach](local_stress_with_FE.ipynb)\n",
     "\n",
     "\n",
     "### PSD Optimizer\n",
     "\n",
     "Derive an equivalent PSD signal\n",
     "\n",
-    "[PSD Optimizer](psd_optimizer.ipynb)"
+    "[PSD Optimizer](psd_optimizer.ipynb)\n",
+    "\n",
+    "\n",
+    "### Ramberg Osgood equation\n",
+    "\n",
+    "Simple demo for the [`RambergOsgood`](https://pylife.readthedocs.io/en/stable/materiallaws/rambgood.html) class\n",
+    "\n",
+    "[Ramberg Osgood](ramberg_osgood.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
