--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -63,8 +63,8 @@
     "mpl.style.use('bmh')\n",
     "%matplotlib inline\n",
     "\n",
-    "# pv.set_plot_theme('document')\n",
-    "# pv.set_jupyter_backend('panel')"
+    "pv.set_plot_theme('document')\n",
+    "pv.set_jupyter_backend('panel')"
    ]
   },
   {
