--- a/demos/local_stress_with_FE.ipynb
+++ b/demos/local_stress_with_FE.ipynb
@@ -35,9 +35,8 @@
     "import pyvista as pv\n",
     "\n",
     "# from ansys.dpf import post\n",
-    "# pv.set_plot_theme('document')\n",
-    "# pv.set_jupyter_backend('ipyvtklink')\n",
-    "# get_ipython().run_line_magic('matplotlib', 'inline')"
+    "pv.set_plot_theme('document')\n",
+    "pv.set_jupyter_backend('panel')"
    ]
   },
   {
