Follow pyvista deprecation
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -464,7 +464,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "areas =  grid.compute_cell_sizes().cell_arrays[\"Area\"]"
+    "areas =  grid.compute_cell_sizes().cell_data[\"Area\"]"
    ]
   },
   {
