Implement FKM guideline nonlinear
Signed-off-by: Benjamin Maier <Benjamin.Maier2@de.bosch.com>

--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Wölhler analysis module takes fatigue data, i. e. values of the form `cycles` `load` `fracture` that have been measured by a fatigue testing lab and analyze it to return the parameters of a Wöhler curve. \n",
+    "The Wöhler analysis module takes fatigue data, i.e., values of the form `cycles` `load` `fracture` that have been measured by a fatigue testing lab and analyzes it to return the parameters of a Wöhler curve. \n",
     "\n",
     "These are:\n",
     "* the slope `k_1`\n",
@@ -107,14 +107,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Genaral preparations"
+    "### General preparations"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before we do the actual analysis, we make some preparations like, guessing the initial `fatigue_limit`, distinguishing between `runouts` and `fractures` and between `infinite_zone` and `finite_zone`."
+    "Before we do the actual analysis, we make some preparations like guessing the initial `fatigue_limit`, distinguishing between `runouts` and `fractures` and between `infinite_zone` and `finite_zone`."
    ]
   },
   {
@@ -342,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sometimes it is desirable to pin one or more parameters of the Wöhler curve to a predefined value based on assumptions of the Wöhler curve. You can archive that by handing the fixed parameters to the `MaxLikeFull` object using the `fixed_parameters` argument."
+    "Sometimes, it is desirable to pin one or more parameters of the Wöhler curve to a predefined value based on assumptions on the Wöhler curve. You can achieve that by handing the fixed parameters to the `MaxLikeFull` object using the `fixed_parameters` argument."
    ]
   },
   {
@@ -401,7 +401,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.5"
   },
   "name": "woehler_analyzer.ipynb"
  },
