--- a/demos/index.ipynb
+++ b/demos/index.ipynb
@@ -87,11 +87,26 @@
     "[PSD Optimizer](psd_optimizer.ipynb)\n",
     "\n",
     "\n",
+    "### FKM nonlinear (local strain concept)\n",
+    "\n",
+    "Several scripts that (i) demonstrate usage of pylife for FKM nonlinear assessment, and (ii) allow to debug the implemented method.\n",
+    "\n",
+    "[FKM nonlinear](fkm_nonlinear/index.ipynb)\n",
+    "\n",
+    "\n",
     "### Ramberg Osgood equation\n",
     "\n",
     "Simple demo for the [`RambergOsgood`](https://pylife.readthedocs.io/en/stable/materiallaws/rambgood.html) class\n",
     "\n",
-    "[Ramberg Osgood](ramberg_osgood.ipynb)"
+    "[Ramberg Osgood](ramberg_osgood.ipynb)\n",
+    "\n",
+    "### Importing finite element meshes\n",
+    "\n",
+    "The following demos show how to import finite element meshes in various formats:\n",
+    "\n",
+    "* [Abaqus](import_mesh_abaqus.ipynb)\n",
+    "* [ANSYS](import_mesh_ansys.ipynb)\n",
+    "* [VMAP](import_mesh_vmap.ipynb)\n"
    ]
   },
   {
@@ -117,7 +132,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
