--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,9 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no stored variable or alias rf_dict\n"
+     ]
+    }
+   ],
    "source": [
     "%store -r rf_dict"
    ]
@@ -87,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,9 +107,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rf_dict' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m transformed_dict \u001b[38;5;241m=\u001b[39m {k: rf_act\u001b[38;5;241m.\u001b[39mmeanstress_transform\u001b[38;5;241m.\u001b[39mfkm_goodman(meanstress_sensitivity, R_goal\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1.\u001b[39m)\u001b[38;5;241m.\u001b[39mto_pandas() \u001b[38;5;28;01mfor\u001b[39;00m k, rf_act \u001b[38;5;129;01min\u001b[39;00m \u001b[43mrf_dict\u001b[49m\u001b[38;5;241m.\u001b[39mitems()}\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'rf_dict' is not defined"
+     ]
+    }
+   ],
    "source": [
     "transformed_dict = {k: rf_act.meanstress_transform.fkm_goodman(meanstress_sensitivity, R_goal=-1.).to_pandas() for k, rf_act in rf_dict.items()}"
    ]
@@ -516,7 +536,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
