Uplift pandas dependency version pinning
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -386,7 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mises = pyLife_mesh.groupby('element_id')['S11', 'S22', 'S33', 'S12', 'S13', 'S23'].mean().equistress.mises()\n",
+    "mises = pyLife_mesh.groupby('element_id')[['S11', 'S22', 'S33', 'S12', 'S13', 'S23']].mean().equistress.mises()\n",
     "mises /= 150.0  # the nominal load level in the FEM analysis\n",
     "#mises"
    ]
