Introduce two notched beam for hotspot detection demo
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/index.ipynb
+++ b/demos/index.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "In a connected FEM mesh, hotspots of a scalar value like damage sum, or von Mises stress can be detected and classified.\n",
     "\n",
-    "[Hotspot detection](hotspot_plate.ipynb)\n",
+    "[Hotspot detection](hotspot_beam.ipynb)\n",
     "\n",
     "\n",
     "### Gradients in a mesh\n",
