--- a/demos/hotspot_beam.ipynb
+++ b/demos/hotspot_beam.ipynb
@@ -32,10 +32,7 @@
     "import pylife.mesh.hotspot\n",
     "import pylife.vmap\n",
     "\n",
-    "import pyvista as pv\n",
-    "\n",
-    "pv.set_plot_theme('document')\n",
-    "pv.set_jupyter_backend('panel')"
+    "import pyvista as pv"
    ]
   },
   {
@@ -102,7 +99,7 @@
    "outputs": [],
    "source": [
     "grid = pv.UnstructuredGrid(*mesh.mesh.vtk_data())\n",
-    "plotter = pv.Plotter(window_size=[1920, 1080])\n",
+    "plotter = pv.Plotter()\n",
     "plotter.add_mesh(grid, scalars=mesh.groupby('element_id')['hotspot'].first().to_numpy(), show_edges=True)\n",
     "plotter.add_scalar_bar()\n",
     "plotter.show()"
@@ -169,9 +166,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
