--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -61,10 +61,7 @@
     "# mpl.style.use('seaborn')\n",
     "# mpl.style.use('seaborn-notebook')\n",
     "mpl.style.use('bmh')\n",
-    "%matplotlib inline\n",
-    "\n",
-    "pv.set_plot_theme('document')\n",
-    "pv.set_jupyter_backend('panel')"
+    "%matplotlib inline"
    ]
   },
   {
@@ -255,7 +252,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "#### Plot the damage vs collectives"
@@ -433,9 +433,8 @@
    "outputs": [],
    "source": [
     "grid = pv.UnstructuredGrid(*pyLife_mesh.mesh.vtk_data())\n",
-    "plotter = pv.Plotter(window_size=[1920, 1400])\n",
-    "plotter.add_mesh(grid, scalars=damage.to_numpy(), log_scale=True,\n",
-    "                show_edges=True, cmap='jet')\n",
+    "plotter = pv.Plotter()\n",
+    "plotter.add_mesh(grid, scalars=damage.to_numpy(), log_scale=True, show_edges=True, cmap='jet')\n",
     "plotter.add_scalar_bar()\n",
     "plotter.show()"
    ]
@@ -516,7 +515,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
