--- a/demos/stress_gradient.ipynb
+++ b/demos/stress_gradient.ipynb
@@ -24,10 +24,7 @@
     "import pylife.mesh.gradient\n",
     "import pylife.vmap\n",
     "\n",
-    "import pyvista as pv\n",
-    "\n",
-    "pv.set_plot_theme('document')\n",
-    "pv.set_jupyter_backend('panel')"
+    "import pyvista as pv"
    ]
   },
   {
@@ -44,7 +41,7 @@
    "outputs": [],
    "source": [
     "vm_mesh = pylife.vmap.VMAPImport(\"plate_with_hole.vmap\")\n",
-    "pyLife_mesh = (vm_mesh.make_mesh('1', 'STATE-2')\n",
+    "mesh = (vm_mesh.make_mesh('1', 'STATE-2')\n",
     "               .join_coordinates()\n",
     "               .join_variable('STRESS_CAUCHY')\n",
     "               .to_frame())"
@@ -63,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyLife_mesh['mises'] = pyLife_mesh.equistress.mises()"
+    "mesh['mises'] = mesh.equistress.mises()"
    ]
   },
   {
@@ -79,18 +76,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grad = pyLife_mesh.gradient.gradient_of('mises')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "grad = mesh.gradient.gradient_of('mises')\n",
     "grad[\"abs_grad\"] = np.linalg.norm(grad, axis = 1)\n",
-    "pyLife_mesh = pyLife_mesh.join(grad)\n",
-    "display(pyLife_mesh)\n"
+    "mesh = mesh.join(grad)\n",
+    "display(mesh)\n"
    ]
   },
   {
@@ -99,12 +88,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid = pv.UnstructuredGrid(*pyLife_mesh.mesh.vtk_data())\n",
-    "plotter = pv.Plotter(window_size=[1920, 1080])\n",
-    "plotter.add_mesh(grid, scalars=pyLife_mesh.groupby('element_id')[\"abs_grad\"].mean().to_numpy(),\n",
-    "                show_edges=True, cmap='jet')\n",
+    "grid = pv.UnstructuredGrid(*mesh.mesh.vtk_data())\n",
+    "plotter = pv.Plotter()\n",
+    "plotter.add_mesh(grid, scalars=mesh.groupby('element_id')[\"abs_grad\"].mean().to_numpy(), show_edges=True, cmap='jet')\n",
     "plotter.add_scalar_bar()\n",
     "plotter.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"That's it\""
    ]
   }
  ],
@@ -123,10 +120,11 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
   },
   "name": "stress_gradient.ipynb"
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
