--- a/demos/stress_strength.ipynb
+++ b/demos/stress_strength.ipynb
@@ -338,7 +338,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
