Drop panel dependency alltogether
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/local_stress_with_FE.ipynb
+++ b/demos/local_stress_with_FE.ipynb
@@ -32,11 +32,7 @@
     "import pylife.stress\n",
     "import pylife.strength.fatigue\n",
     "import pylife.utils.histogram as psh\n",
-    "import pyvista as pv\n",
-    "\n",
-    "# from ansys.dpf import post\n",
-    "pv.set_plot_theme('document')\n",
-    "pv.set_jupyter_backend('panel')"
+    "import pyvista as pv\n"
    ]
   },
   {
