--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -61,10 +61,7 @@
     "# mpl.style.use('seaborn')\n",
     "# mpl.style.use('seaborn-notebook')\n",
     "mpl.style.use('bmh')\n",
-    "%matplotlib inline\n",
-    "\n",
-    "pv.set_plot_theme('document')\n",
-    "pv.set_jupyter_backend('panel')"
+    "%matplotlib inline"
    ]
   },
   {
@@ -275,7 +272,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "#### Plot the damage vs collectives"
@@ -453,9 +453,8 @@
    "outputs": [],
    "source": [
     "grid = pv.UnstructuredGrid(*pyLife_mesh.mesh.vtk_data())\n",
-    "plotter = pv.Plotter(window_size=[1920, 1400])\n",
-    "plotter.add_mesh(grid, scalars=damage.to_numpy(), log_scale=True,\n",
-    "                show_edges=True, cmap='jet')\n",
+    "plotter = pv.Plotter()\n",
+    "plotter.add_mesh(grid, scalars=damage.to_numpy(), log_scale=True, show_edges=True, cmap='jet')\n",
     "plotter.add_scalar_bar()\n",
     "plotter.show()"
    ]
